Refetoração Model e Controller Produto

--- a/ExercicioVendasMasterDetail/ExercicioVendasMasterDetail/Views/Produtos/Create.cshtml
+++ b/ExercicioVendasMasterDetail/ExercicioVendasMasterDetail/Views/Produtos/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ExercicioVendasMasterDetail.Models.PRODUTO
+﻿@model ExercicioVendasMasterDetail.Models.Produto
 
 @{
     ViewBag.Title = "Create";
