--- a/ExercicioVendasMasterDetail/ExercicioVendasMasterDetail/Views/Produtos/Details.cshtml
+++ b/ExercicioVendasMasterDetail/ExercicioVendasMasterDetail/Views/Produtos/Details.cshtml
@@ -1,34 +1,34 @@
-﻿@model ExercicioVendasMasterDetail.Models.PRODUTO
+﻿@model ExercicioVendasMasterDetail.Models.Produto
 
-@{
-    ViewBag.Title = "Details";
-}
+    @{
+        ViewBag.Title = "Details";
+    }
 
-<h2>Details</h2>
+    <h2>Details</h2>
 
-<div>
-    <h4>PRODUTO</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.DESCRICAO)
-        </dt>
+    <div>
+        <h4>PRODUTO</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Descricao)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DESCRICAO)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Descricao)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.VLR_UNIT)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.VlrUnit)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.VLR_UNIT)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.VlrUnit)
+            </dd>
 
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID_PRODUTO }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.IdProduto }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
