--- a/ExercicioVendasMasterDetail/ExercicioVendasMasterDetail/Views/Produtos/Delete.cshtml
+++ b/ExercicioVendasMasterDetail/ExercicioVendasMasterDetail/Views/Produtos/Delete.cshtml
@@ -1,40 +1,41 @@
-﻿@model ExercicioVendasMasterDetail.Models.PRODUTO
+﻿@model ExercicioVendasMasterDetail.Models.Produto
 
-@{
-    ViewBag.Title = "Delete";
-}
-
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>PRODUTO</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.DESCRICAO)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DESCRICAO)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.VLR_UNIT)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.VLR_UNIT)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+    @{
+        ViewBag.Title = "Delete";
     }
-</div>
+
+    <h2>Delete</h2>
+
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>PRODUTO</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Descricao)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Descricao)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.VlrUnit)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.VlrUnit)
+            </dd>
+
+        </dl>
+
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
+    </div>
