--- a/ExercicioVendasMasterDetail/ExercicioVendasMasterDetail/Views/Shared/_Layout.cshtml
+++ b/ExercicioVendasMasterDetail/ExercicioVendasMasterDetail/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Vendas", "Index", "Vendas")</li>
+                    <li>@Html.ActionLink("Nova Venda", "NewVenda", "VendaItemVenda")</li>                    
+                    <li>@Html.ActionLink("Teste Venda", "Index", "VendaItemVenda")</li>                    
                     <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
                     <li>@Html.ActionLink("Produtos", "Index", "Produtos")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
